codex-rs/tui2/src/snapshots/codex_tui2__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui2/src/pager_overlay.rs
expression: snapshot
---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
• Added foo.txt (+2 -0)
    1 +hello
    2 +world

• Added foo.txt (+2 -0)
    1 +hello
    2 +world
─────────────────────────────────────────────────────────────────────────── 0% ─
 ↑/↓ Scroll   pgup/pgdn Page   home/end Jump
 q Quit   esc Edit previous
