codex-rs/tui2/src/snapshots/codex_tui2__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui2/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ Scroll   pgup/pgdn Page   home/end "
" q Quit   esc Edit previous             "
"                                        "
