codex-rs/tui2/src/snapshots/codex_tui2__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: tui2/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
"───────────────────────────────── 100% ─"
" ↑/↓ Scroll   pgup/pgdn Page   home/end "
" q Quit   esc Edit previous             "
"                                        "
